--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body style="margin: 0">
     <div style="height: 100vh;" id="map"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA8DjurFu8ZmLXBhgDDszPYfScdExYg8Tg"></script>
-    <script src="./src/index.ts"></script>
+    <script src="./dist/build.06da9ca9.js"></script>
 </body>
 
 </html>
